new_tests.rst: add doc for jvm-logging